test/asm/impossible-bank.err
error: BANK only allowed for ROMX, WRAMX, SRAM, or VRAM sections
    at impossible-bank.asm(1)
Assembly aborted with 1 error!
