test/asm/impossible-bank.asm
SECTION "hram", HRAM, BANK[0]
